# openRBRVR

./: .clang-format  .gitignore  .gitmodules  API.cpp  CHANGELOG.md  CMakeLists.txt  Config.hpp  D3D.hpp  FAQ.md  FAQ_CZ.md  FAQ_FR.md  Hook.hpp  IMPLEMENTATION_DETAILS.md  IPlugin.h  Licenses.hpp  Makefile  Menu.cpp  Menu.hpp  OpenVR.cpp  OpenVR.hpp  OpenXR.cpp  OpenXR.hpp  Quaternion.hpp  README.md  READMEFR.txt  README_CZ.md  README_FR.md  Util.hpp  VR.cpp  VR.hpp  Version.hpp.in  Vertex.cpp  build.zig  build.zig.zon  debug.bat  flake.nix  linux.md  openRBRVR.cpp  openRBRVR.def  openRBRVR.hpp  (+3 more)
.github/workflows/: build.yml
dxvk/: d3d9_vr.h
lib/: libminhook.x86.lib  openxr_loaderd.lib
multiviewpatcher/: README.md
src/: API.cpp  API.hpp  Config.hpp  D3D.hpp  DummyVR.cpp  DummyVR.hpp  Dx.cpp  Dx.hpp  FPSCounter.hpp  Globals.cpp  Globals.hpp  Hook.hpp  IPlugin.h  Licenses.hpp  Menu.cpp  Menu.hpp  OpenVR.cpp  OpenVR.hpp  OpenXR.cpp  OpenXR.hpp  RBR.cpp  RBR.hpp  RenderTarget.cpp  RenderTarget.hpp  Util.cpp  Util.hpp  VR.cpp  VR.hpp  Version.rc.in  Vertex.cpp  Vertex.hpp  openRBRVR.cpp  openRBRVR.def  openRBRVR.hpp
